<resources>
    <string name="app_name">Orange Fintech</string>
    <string name="bienvenida">¡Bienvenido a Orange!</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="confirmar">Confirmar contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="crear">CREAR USUARIO</string>
    <string name="ingresar">INGRESAR</string>
    <string name="menu1">Inicio</string>
    <string name="menu2">Compra</string>
    <string name="menu3">Cuenta</string>
    <string name="menu4">Lista</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exchange">Selecciona un exchange:</string>
    <string name="monto">Ingresa el monto:</string>
    <string name="comprar">Comprar</string>
    <string name="saldo">Agregar saldo:</string>
    <string name="compras">Compras Realizadas</string>
</resources>
