<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/btnCrearUser"
        android:layout_width="396dp"
        android:layout_height="58dp"
        android:layout_marginTop="0dp"
        android:background="#00FF8E00"
        android:backgroundTint="#FF8E00"
        android:text="@string/crear"
        android:textSize="24sp"
        android:textStyle="bold"
        app:iconTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngresar" />

    <TextView
        android:id="@+id/tvContrasenia"
        android:layout_width="397dp"
        android:layout_height="64dp"
        android:text="@string/contrasenia"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="380dp"
        android:layout_height="58dp"
        android:text="@string/usuario"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenida" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="252dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#DCDCDC"
        app:layout_constraintBottom_toBottomOf="@id/buttonIngresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContrasenia"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tvContrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario"
        app:layout_constraintVertical_bias="5"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="246dp"
        android:layout_height="97dp"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/tvContrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="301dp"
        android:layout_height="55dp"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="113dp"
        android:background="#00000000"
        android:backgroundTint="#FF8E00"
        android:drawableTint="#F6F6F6"
        android:text="@string/ingresar"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:iconTint="#EAEEF1"
        app:layout_constraintBottom_toTopOf="@+id/btnCrearUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="123dp"
        android:layout_height="132dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_orange_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>

