<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E74C2FF">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:text="@string/confirmar"
        android:textColor="#2196F3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editTextConfirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:text="@string/contrasenia"
        android:textColor="#2196F3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/tvIngresarUsuario"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:layout_marginBottom="10dp"
        android:text="@string/usuario"
        android:textColor="#2196F3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/editTextConfirmar"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/tvNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmar"
        app:layout_constraintVertical_bias="0.298"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/tvConfirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/tvApellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/botonCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:text="@string/crear"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApellido"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:text="@string/nombre"
        android:textColor="#2196F3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmar"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:text="@string/apellido"
        android:textColor="#2196F3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/etApellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIngresarUsuario"
        app:layout_constraintVertical_bias="0.015"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/botonCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApellido"
        app:layout_constraintVertical_bias="0.146"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>