<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragmentos.CompraFragment">

    <TextView
        android:id="@+id/tvExchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="610dp"
        android:text="@string/exchange"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerExchanges"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="0dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/tvMonto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExchange"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/etMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMonto"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvMonto"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="20dp"
        android:text="@string/monto"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etMonto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerExchanges" />

    <Button
        android:id="@+id/buttonComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="50dp"
        android:background="#00000000"
        android:backgroundTint="#FF8E00"
        android:drawableTint="#F6F6F6"
        android:text="@string/comprar"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:iconTint="#EAEEF1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMonto" />
</androidx.constraintlayout.widget.ConstraintLayout>
